# reservoir_simulation

./: [A[B  [A[B.pub  command_memo.txt  project_plan.txt
RC_robot/RC_robot/: IterSolver.m  arm_dynamics.m  construct_network.m  culc_inv_kinematics.m  culc_kinematics.m  culc_kinematics_elbow.m  main.m  param_RC_robot.m  plot_RC_robot.m  test_RC_robot.m  train_RC_robot.m  video_RC_robot.m
RC_robot/__MACOSX/RC_robot/: ._construct_network.m  ._culc_kinematics_elbow.m  ._main.m  ._param_RC_robot.m  ._plot_RC_robot.m  ._test_RC_robot.m  ._train_RC_robot.m  ._video_RC_robot.m
data/generated_data_by_simulation/: step_angle_data.csv
data/pd_control/: 20241106194018.csv
data/predict_graph/: predict.txt
include/: pd_control.h
reservoir_motor/: CMakeLists.txt  arm_dynamics.cpp  clean_and_build.bat  evaluation.cpp  kinematics.cpp  main.cpp  test_RC_robot.cpp  train_RC_robot.cpp
reservoir_motor/header/: arm_dynamics.h  construct_network.h  evaluation.h  kinematics.h  param_RC_robot.h  test_RC_robot.h  train_RC_robot.h
reservoir_motor/src/: arm_dynamics.cpp  construct_network.cpp  evaluation.cpp  kinematics.cpp  main.cpp  test_RC_robot.cpp  train_RC_robot.cpp
sample/chap3/: model.py
sample/chap5/spoken_digit_recognition/: spoken_confusion_matrix.py
script/: model.py  model_new.py  produce_data.py  produce_data2.py  reservoir_predict.py  reservoir_predict1.py  reservoir_predict1_debug.py  reservoir_predict2.py  reservoir_predict3.py  reservoir_run.py  sim_data_plot.py  wout_learn.py  wout_learn_multi.py
src/: main.cpp  pd_control.cpp
